Add sources list views

--- a/app/views/hacks/show.html.erb
+++ b/app/views/hacks/show.html.erb
@@ -23,7 +23,7 @@
   </div>
 
   <div>
-    <ul class="flex flex-wrap -mb-px font-medium text-center list-none  px-2"
+    <ul class="flex flex-wrap -mb-px font-medium text-center list-none px-2"
         id="default-tab"
         data-tabs-toggle="#channel-tab-content"
         role="tablist">
@@ -97,7 +97,7 @@
             textToCopy += "<%= j @hack&.hack_structured_info&.detailed_steps %>\n\n";
             textToCopy += "Detailed Steps\n";
             textToCopy += "<%= j @hack&.hack_structured_info&.detailed_steps %>\n\n";
-            textToCopy += "Additional tools resources\n";
+            textToCopy += "Additional tools sources\n";
             textToCopy += "<%= j @hack&.hack_structured_info&.additional_tools_resources %>\n\n";
             textToCopy += "Case Study\n";
             textToCopy += "<%= j @hack&.hack_structured_info&.case_study %>";
