--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,8 @@
-<div class="card my-4">
-  <h1 class="card-title"><%= @article.title %></h1>
-
-  <p class="card-subtitle">
-    <%= author_and_date(@article) %>
-  </p>
-
-  <div class="card-body">
-    <%= @article.body %>
-  </div>
-
-  <div class="card-actions">
-    <%= link_to "Edit", edit_article_path(@article), class: 'btn' %>
+<div class="relative overflow-x-auto mb-8">
+  <div class="p-6 flex items-center justify-between flex-column pl-6 flex-wrap md:flex-row md:space-y-0 bg-white dark:bg-gray-900">
+    <div class=" flex gap-4">
+      <% breadcrumbs = [["Articles", articles_path], [@article.link, ""]] %>
+      <%= render partial: "layouts/breadcrumbs", locals: { breadcrumbs: breadcrumbs } %>
+    </div>
   </div>
 </div>
