--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -13,7 +13,7 @@
 
   <div class="p-6">
     <div>
-      <%= search_form_for @q, url: hacks_path, method: :get do |f| %>
+      <%= search_form_for @q, url: hacks_path, method: :get, id: "filtersForm" do |f| %>
         <div class="grid grid-cols-4 gap-4">
           <div class="">
             <div class="">
@@ -23,16 +23,16 @@
                     <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
                   </svg>
                 </div>
-                <%= f.text_field :title_or_summary_cont,
-                                 class: "block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
+                <%= f.text_field :init_title_or_summary_cont,
+                                 class: "w-full p-2 pl-10 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
                                  placeholder: "Search ..." %>
               </div>
             </div>
             <div>
               <%= f.select :source_id_eq,
-                           options_for_select(Source.pluck(:name, :id)),
+                           options_for_select(Source.pluck(:name, :id), params.dig(:q, :source_id_eq)),
                            { include_blank: "All Sources" },
-                           class: "block bg-gray-50 mt-2 border border-gray-300 text-gray-500 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+                           class: "block bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
           </div>
 
@@ -43,7 +43,12 @@
                   <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                 </svg>
               </div>
-              <input id="datepicker-range-end" autocomplete="false" name="q[created_at_lteq]" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select start date">
+              <input id="datepicker-range-start"
+                     name="q[created_at_gteq]"
+                     type="text"
+                     value="<%= params.dig(:q, :created_at_gteq) %>"
+                     class="bg-gray-50 border border-gray-300 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                     placeholder="Select start date">
             </div>
 
             <div class="relative">
@@ -52,34 +57,42 @@
                   <path d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z"/>
                 </svg>
               </div>
-              <input id="datepicker-range-end" autocomplete="false" name="q[created_at_lteq]" type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Select end date">
+              <input id="datepicker-range-end"
+                     name="q[created_at_lteq]"
+                     type="text"
+                     value="<%= params.dig(:q, :created_at_lteq) %>"
+                     class="bg-gray-50 border border-gray-300  text-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                     placeholder="Select end date">
             </div>
           </div>
 
           <div class="flex flex-col gap-2">
             <div>
               <%= f.select :hack_categories_category_classification_id_eq,
-                           options_for_select(Classification.pluck(:name, :id)),
+                           options_for_select(Classification.pluck(:name, :id), params.dig(:q, :hack_categories_category_classification_id_eq)),
                            { include_blank: "All Classifications" },
-                           class: "bg-gray-50 mt-2 border border-gray-300 text-gray-500 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+                           class: "bg-gray-50 mt-2 border border-gray-300  text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
             <div>
               <%= f.select :hack_categories_category_id_eq,
-                           options_for_select(Category.pluck(:name, :id)),
+                           options_for_select(Category.pluck(:name, :id), params.dig(:q, :hack_categories_category_id_eq)),
                            { include_blank: "All Categories" },
-                           class: "bg-gray-50 text-gray-500 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
           </div>
 
-          <div class="mt-2">
-            <%= f.submit "Apply filters", class: "btn-sm btn-success text-white text-sm rounded" %>
+          <div class="flex flex-col gap-4">
+            <div class="mt-2">
+              <%= f.submit "Apply filters", class: "btn-sm btn-success text-white text-sm rounded" %>
+            </div>
+            <div class="mt-2">
+              <button type="button" class="btn-sm btn-danger text-white text-sm rounded"
+                      onclick="cleanFilters('filtersForm')">Clean filters
+              </button>
+            </div>
+
           </div>
-
-
-          <!-- Botón de filtro -->
-
         </div>
-
     <% end %>
    <div>
    </div>
@@ -142,7 +155,7 @@
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
           <td class="flex flex-col w-full text-left text-gray-900 dark:text-white px-2">
             <div class="ps-4 px-0">
-              <div class="text-base font-semibold mb-2"><%= hack.title %></div>
+              <div class="text-base font-semibold mb-2"><%= hack.init_title %></div>
               <div class="font-normal text-gray-500 line-clamp-2"><%= hack.summary %></div>
             </div>
           </td>
@@ -190,14 +203,28 @@
 </div>
 
 <script>
-    function clearSearch() {
-        const input = document.querySelector('input[name="q[title_or_summary_or_video_channel_name_cont]"]');
-        if (input.value.length > 0) {
-            input.value = '';
-            const form = document.querySelector('form[data-turbo-frame="search"]');
-            if (form) {
-                form.requestSubmit();
-            }
+    function cleanFilters(formId) {
+        const form = document.getElementById(formId);
+        if (!form) {
+            console.error(`Formulario con ID '${formId}' no encontrado.`);
+            return;
         }
+
+        Array.from(form.elements).forEach((element) => {
+            if (element.tagName === "SELECT") {
+                element.selectedIndex = 0;
+            } else if (element.tagName === "INPUT") {
+                if (element.type === "text" || element.type === "number" || element.type === "date") {
+                    // Limpiar campos de texto, números y fechas
+                    element.value = "";
+                } else if (element.type === "checkbox" || element.type === "radio") {
+                    // Deseleccionar checkboxes y radios
+                    element.checked = false;
+                }
+            }
+        });
     }
+
 </script>
+
+
