single hack view

--- a/app/views/hacks/_hack_section.html.erb
+++ b/app/views/hacks/_hack_section.html.erb
@@ -1,5 +1,5 @@
 <div class="max-w-sm p-6 bg-white">
-  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"><%= hack.title %></h5>
+  <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"><%= hack.premium_title %></h5>
   <p>
     <strong>Is Hack:</strong>
     <%= hack.is_hack %>
