--- a/app/views/hacks/_basic.html.erb
+++ b/app/views/hacks/_basic.html.erb
@@ -1,10 +1,19 @@
 <div class="p-6 pt-4 w-3/4">
-  <p class="font-bold">Title</p>
+  <p class="font-bold">Init Title</p>
   <p>
-    <span><%= hack.title %>
-      <span class="<%= class_for_boolean(hack.hack_validation.present? ? hack.hack_validation.status : hack.is_hack?) %> inline-block ml-2"><%= text_for_boolean(hack.hack_validation.present? ? hack.hack_validation.status : hack.is_hack?) %></span>
-    </span>
+    <span><%= hack.premium_title %></span>
   </p>
+
+  <p class="font-bold">Free Title</p>
+  <p>
+    <span><%= hack.free_title %></span>
+  </p>
+
+  <p class="font-bold">Extended Title</p>
+  <p>
+    <span><%= hack.premium_title %></span>
+  </p>
+
 
   <p class="font-bold mt-4">Summary</p>
   <p><%= raw(@markdown.render(hack.summary)) if hack.summary%></p>
@@ -12,37 +21,57 @@
   <p class="font-bold mt-4">Justification</p>
   <p><%= raw(@markdown.render(hack.justification)) if hack.justification %></p>
 
-  <p class="font-bold mt-4">Video Transcription</p>
-  <p><%= raw(@markdown.render(hack.video.transcription.content)) %></p>
-  <a href="<%= hack.video.source_link %>" target="_blank" class="text-blue-600 dark:text-blue-500 hover:underline">Ver video</a>
+  <p class="font-bold mt-4">Description</p>
+  <p class=""><%= raw(@markdown.render(@hack.description)) %></p>
 
-  <% if hack.is_hack? %>
-    <p class="font-bold mt-4">Queries</p>
-    <ul class="pl-4">
-      <% hack.queries.each do |query| %>
-        <li><%= query.content.capitalize %></li>
-      <% end %>
-    </ul>
-
-    <p class="font-bold mt-4">Validation Sources</p>
-    <ul class="pl-4">
-      <% validation_links = hack.hack_validation&.links%>
-      <% validation_links ||= "[]" %>
-      <% validation_links = JSON.parse(validation_links) %>
-      <% validation_links.each do |link| %>
-        <li>
-          <a href="<%= link %>" target="_blank" class=" dark:text-blue-500 hover:underline"><%= link %></a>
+  <p class="font-bold mt-4">Categories</p>
+  <p><ul class="list-disc list-outside pl-5">
+      <% @hack.hack_categories.each do |hack_category| %>
+        <li class="mb-2">
+          <div class="inline-flex">
+            <h5 class="font-semibold"><%= hack_category.category.name %></h5>
+            <div class="flex items-center py-0.5 ">
+              <svg data-popover-target="category-info-<%= hack_category.category.id %>" data-popover-placement="bottom"
+                  class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white cursor-pointer ms-1"
+                  aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm0 16a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm1-5.034V12a1 1 0 0 1-2 0v-1.418a1 1 0 0 1 1.038-.999 1.436 1.436 0 0 0 1.488-1.441 1.501 1.501 0 1 0-3-.116.986.986 0 0 1-1.037.961 1 1 0 0 1-.96-1.037A3.5 3.5 0 1 1 11 11.466Z"/>
+              </svg>
+              <div data-popover id="category-info-<%= hack_category.category.id %>" role="tooltip"
+                  class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 w-72 dark:bg-gray-800 dark:border-gray-600 dark:text-gray-400">
+                <div class="p-3 space-y-2">
+                  <p class="text-sm normal-case font-normal"><%= hack_category.category.description %></p>
+                </div>
+                <div data-popper-arrow></div>
+              </div>
+            </div>
+          </div>
+          <p><%= hack_category.justification %></p>
         </li>
       <% end %>
-    </ul>
+  </ul></p>
+  <p class="font-bold mt-4">Main goal</p>
+  <p><%= raw(@markdown.render(@hack.main_goal)) %></p>
 
-    <p class="font-bold mt-4">Scraped Sources</p>
-    <ul class="pl-4">
-      <% hack.scraped_results.each do |scraped_result| %>
-        <li>
-          <a href="<%= scraped_result.link %>" target="_blank" class=" dark:text-blue-500 hover:underline"><%= scraped_result.link %></a>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
+  <p class="font-bold mt-4">Steps Summary</p>
+  <p><%= raw(@markdown.render(@hack.steps_summary)) %></p>
+
+  <p class="font-bold mt-4">Resources Needed</p>
+  <p><%= raw(@markdown.render(@hack.resources_needed)) %></p>
+
+  <p class="font-bold mt-4">Expected Benefits</p>
+  <p><%= raw(@markdown.render(@hack.expected_benefits)) %></p>
+
+  <p class="font-bold mt-4">Detailed Steps</p>
+  <p><%= raw(@markdown.render(@hack.detailed_steps)) %></p>
+
+  <p class="font-bold mt-4">Additional tools resources</p>
+  <p><%= raw(@markdown.render(@hack.additional_tools_resources)) %></p>
+
+  <p class="font-bold mt-4">Case Study</p>
+  <p><%= raw(@markdown.render(@hack.case_study)) %></p>
+
+
+
+  <a href="<%= hack.article.link %>" target="_blank" class="text-blue-600 dark:text-blue-500 hover:underline">Ver Article</a>
+  
 </div>
