--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -23,7 +23,7 @@
                     <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
                   </svg>
                 </div>
-                <%= f.text_field :title_or_summary_cont,
+                <%= f.text_field :init_title_or_summary_cont,
                                  class: "block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
                                  placeholder: "Search ..." %>
               </div>
@@ -142,7 +142,7 @@
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
           <td class="flex flex-col w-full text-left text-gray-900 dark:text-white px-2">
             <div class="ps-4 px-0">
-              <div class="text-base font-semibold mb-2"><%= hack.title %></div>
+              <div class="text-base font-semibold mb-2"><%= hack.premium_title %></div>
               <div class="font-normal text-gray-500 line-clamp-2"><%= hack.summary %></div>
             </div>
           </td>
