--- a/app/views/hacks/show.html.erb
+++ b/app/views/hacks/show.html.erb
@@ -1,9 +1,9 @@
 <div class="relative h-screen overflow-x-auto mb-8 bg-white">
   <div class="flex items-center justify-between flex-column pl-6 flex-wrap md:flex-row md:space-y-0 bg-white dark:bg-gray-900">
-    <div class="py-5">
-      <% breadcrumbs = [["Hacks", hacks_path], [@hack.title, ""]] unless  @channel %>
-      <% breadcrumbs ||= [["Channels", channels_path], [@channel.name, channel_path(@channel)], [@hack.title, ""]] %>
-      <%= render partial: "layouts/breadcrumbs", locals: { breadcrumbs: breadcrumbs } %>
+    <div class="py-5">      
+      <% breadcrumbs = [["Hacks", hacks_path], [@hack.premium_title, ""]] %>
+      
+      <%= render partial: "layouts/breadcrumbs", locals: { breadcrumbs: breadcrumbs } %>     
     </div>
     <div class="mr-2">
       <%= link_to download_pdf_hack_path(id: @hack.id, format: :pdf), target: "_blank", class: "text-gray-500 border border-gray-500 hover:bg-gray-200 hover:text-white font-medium rounded text-sm p-2.5 text-center inline-flex items-center me-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:focus:ring-blue-800 dark:hover:bg-blue-500" do %>
@@ -20,90 +20,11 @@
         <span class="sr-only">Copy hack</span>
       </button>
     </div>
-  </div>
-
-  <div>
-    <ul class="flex flex-wrap -mb-px font-medium text-center list-none px-2"
-        id="default-tab"
-        data-tabs-toggle="#channel-tab-content"
-        role="tablist">
-      <li class="me-2" role="presentation">
-        <button class="inline-block p-4 border-b-2 rounded-t-lg" id="basic-tab"
-                data-tabs-target="#basic-tab-content" type="button" role="tab" aria-controls="basic-tab"
-                aria-selected="0"
-        >
-          Basic Information
-        </button>
-      </li>      
-    </ul>
-  </div>
+  </div>  
 
   <div id='basic-tab-content'>
     <%= render partial: "basic", locals: { hack: @hack} %>
   </div>
 
-  <div id='advanced-tab-content'>
-    <%= render partial: "advanced", locals: { hack: @hack} %>
-  </div>
-
 </div>
 
-<script>
-    function copyHackToClipboard() {
-        let textToCopy = "Title\n";
-        textToCopy += "<%= j @hack.title %>\n\n";
-        textToCopy += "Summary\n";
-        textToCopy += "<%= j @hack.summary if @hack.summary %>\n\n";
-        textToCopy += "Justification\n";
-        textToCopy += "<%= j @hack.justification if @hack.justification %>\n\n";
-        textToCopy += "Video Transcription\n";
-        textToCopy += "<%= j @hack.video.transcription.content %>\n\n";
-
-        textToCopy += "Queries\n";
-        textToCopy += "<%= j @hack.queries.pluck(:content).join('\n') %>";
-        textToCopy += '\n\n'
-
-        textToCopy += "Validation Sources\n";
-        <% validation_links = @hack.hack_validation&.links %>
-        <% validation_links ||= "[]" %>
-        <% validation_links = JSON.parse(validation_links) %>
-        textToCopy += "<%= j validation_links.join('\n') %>";
-
-        const hasAdvanceData = "<%= @hack&.hack_structured_info&.present? %>"
-
-        if (hasAdvanceData == "true") {
-            textToCopy += "Extended Title\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.extended_title %>\n\n";
-            textToCopy += "Description\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.description %>\n\n";
-            textToCopy += "Analysis\n";
-            textToCopy += "<%= j @hack&.hack_validation.analysis %>\n\n";
-            textToCopy += "Main goal\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.main_goal %>\n\n";
-            textToCopy += "Steps Summary\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.steps_summary %>\n\n";
-            textToCopy += "Resources Needed\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.resources_needed %>\n\n";
-            textToCopy += "Expected Benefits\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.expected_benefits %>\n\n";
-            textToCopy += "Detailed Steps\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.detailed_steps %>\n\n";
-            textToCopy += "Detailed Steps\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.detailed_steps %>\n\n";
-            textToCopy += "Additional tools sources\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.additional_tools_resources %>\n\n";
-            textToCopy += "Case Study\n";
-            textToCopy += "<%= j @hack&.hack_structured_info&.case_study %>";
-
-
-        }
-
-        navigator.clipboard.writeText(textToCopy)
-            .then(() => {
-                // alert("Información copiada al portapapeles.");
-            })
-            .catch(err => {
-                console.error("Error al copiar al portapapeles: ", err);
-            });
-    }
-</script>
