--- a/app/views/hacks/index.html.erb
+++ b/app/views/hacks/index.html.erb
@@ -14,19 +14,13 @@
   <div class="p-6">
     <div>
       <%= search_form_for @q, url: hacks_path, method: :get, id: "filtersForm" do |f| %>
-        <div class="grid grid-cols-4 gap-4">
-          <div class="">
-            <div class="">
-              <div class="relative w-full">
-                <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                  <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                  </svg>
-                </div>
-                <%= f.text_field :init_title_or_summary_cont,
-                                 class: "w-full p-2 pl-10 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500",
-                                 placeholder: "Search ..." %>
-              </div>
+        <div class="grid grid-cols-6 gap-4">
+          <div class="flex flex-col gap-2">
+            <div>
+              <%= f.select :is_advise_eq,
+                           options_for_select([["Only Hacks", false], ["Only Advices", true]], params.dig(:q, :is_advise_eq)),
+                           { include_blank: "All Type" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
             <div>
               <%= f.select :source_id_eq,
@@ -37,21 +31,70 @@
           </div>
 
           <div class="flex flex-col gap-2">
-            <% complexity_classification = Classification.find_by_name('Complexity') %>
-            <% financial_classification = Classification.find_by_name('Financial') %>
             <div>
-              <%= f.select :hack_categories_category_classification_id_eq,
-                           options_for_select(Category.where(classification_id: complexity_classification.id).pluck(:name, :id), params.dig(:q, :hack_categories_category_classification_id_eq)),
-                           { include_blank: "All Complexities" },
-                           class: "bg-gray-50 mt-2 border border-gray-300  text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+              <%= f.select :with_popularity,
+                           options_for_select(Category.popularity_categories.pluck(:name, :id), params.dig(:q, :with_popularity)),
+                           { include_blank: "All Popularity" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
+
             <div>
-              <%= f.select :hack_categories_category_id_eq,
-                           options_for_select(Category.where(classification_id: financial_classification.id).pluck(:name, :id), params.dig(:q, :hack_categories_category_id_eq)),
-                           { include_blank: "All Financials" },
+              <%= f.select :with_financial_topic,
+                           options_for_select(Category.financial_topic_categories.pluck(:name, :id), params.dig(:q, :with_financial_topic)),
+                           { include_blank: "All Financial Topics" },
                            class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
             </div>
           </div>
+
+          <div class="flex flex-col gap-2">
+            <div>
+              <%= f.select :with_audience,
+                           options_for_select(Category.audience_categories.pluck(:name, :id), params.dig(:q, :with_audience)),
+                           { include_blank: "All Audiences" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+
+            <div>
+              <%= f.select :with_horizon,
+                           options_for_select(Category.horizon_categories.pluck(:name, :id), params.dig(:q, :with_horizon)),
+                           { include_blank: "All Time Horizon" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+          </div>
+
+          <div class="flex flex-col gap-2">
+            <div>
+              <%= f.select :with_risk,
+                           options_for_select(Category.risk_categories.pluck(:name, :id), params.dig(:q, :with_risk)),
+                           { include_blank: "All Risks" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+
+            <div>
+              <%= f.select :with_implementation,
+                           options_for_select(Category.implementation_categories.pluck(:name, :id), params.dig(:q, :with_implementation)),
+                           { include_blank: "All Implementations" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+
+          </div>
+
+          <div class="flex flex-col gap-2">
+            <div>
+              <%= f.select :with_financial,
+                           options_for_select(Category.financial_categories.pluck(:name, :id), params.dig(:q, :with_financial)),
+                           { include_blank: "All Financials" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+
+            <div>
+              <%= f.select :with_knowledge,
+                           options_for_select(Category.knowledge_categories.pluck(:name, :id), params.dig(:q, :with_knowledge)),
+                           { include_blank: "All Knowledge" },
+                           class: "bg-gray-50 mt-2 border border-gray-300 text-sm rounded focus:ring-blue-500 focus:border-blue-500 w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white" %>
+            </div>
+          </div>
+
 
           <div class="flex flex-col gap-4">
             <div class="mt-2">
@@ -69,7 +112,7 @@
    <div>
    </div>
     </div>
-    <div class="flex justify-end">
+    <div class="flex justify-end pt-6">
       <nav class="flex gap-4 p-2 pl-6 px-4 items-center justify-end flex-column flex-wrap md:flex-row justify-between" aria-label="Table navigation">
             <span class="text-sm font-normal text-gray-500 dark:text-gray-400 mb-4 md:mb-0 block w-full md:inline md:w-auto">
               <%= t("helpers.page.showing") %> <span class="font-semibold text-gray-900 dark:text-white"><%= "#{@pagy.from}-#{@pagy.to}" %></span> <%= t("helpers.page.of") %> <span class="font-semibold text-gray-900 dark:text-white"><%= @pagy.count %></span></span>
@@ -107,44 +150,102 @@
     <table class="mt-2 w-full border border-gray-200 text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <th scope="col" class="px-6 py-3">
+        <th scope="col" class="px-6 py-3 w-96">
           Title
         </th>
-        <th scope="col" class="px-6 py-3 text-center">
-          Actions
+        <th scope="col" class="px-0 py-3 text-center">
+          Type
         </th>
 
-        <th scope="col" class="px-6 py-3 text-center">
-          Source
+        <th scope="col" class="px-0 py-3 text-center">
+          Popularity
         </th>
-        <th scope="col" class="px-6 py-3 text-center">
-          Created at
+        <th scope="col" class="px-0 py-3 text-center">
+          F. Topic
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          audience
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          horizon
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          risk
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          implementation
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          financial
+        </th>
+        <th scope="col" class="px-0 py-3 text-center">
+          knowledge
         </th>
       </tr>
       </thead>
       <tbody>
       <% @hacks.each do |hack|%>
-        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-          <td class="flex flex-col w-full text-left text-gray-900 dark:text-white px-2">
+        <tr class="bg-white cursor-pointer border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600"
+            onclick="window.location='<%= hack_path(id: hack) %>'">
+          <td class="flex flex-col w-full text-left text-gray-900 dark:text-white px-2 w-96">
             <div class="ps-4 px-0">
               <div class="text-base font-semibold mb-2"><%= hack.init_title %></div>
               <div class="font-normal text-gray-500 line-clamp-2"><%= hack.summary %></div>
             </div>
           </td>
-          <td class="px-4 py-4 text-center w-32">
-            <div class="inline-flex gap-2">
-              <%= link_to "View hack", hack_path(id: hack), class: "" %>
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.is_advise? ? "Advice" : "Hack" %></span>
             </div>
           </td>
 
-          <td class="px-4 py-4 text-center w-32">
-            <div class="bg-gray-50 rounded-full p-1 whitespace-nowrap">
-              <a href="<%= source_path(hack.source) %>" class="text-center text-sm text-gray-600"><%= hack.source.name %></a>
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.popularity_categories.map(&:name).to_sentence %></span>
             </div>
           </td>
-          <td class="px-4 py-4 text-center w-32">
-            <%= hack.created_at&.strftime("%Y/%m/%d") %>
-          </td>          
+
+          <td class="px-0 py-2 text-center">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.financial_topic_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.audience_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.horizon_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.risk_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.implementation_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.financial_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
+
+          <td class="px-0 py-2 text-center ">
+            <div class="inline-flex">
+              <span class="bg-gray-100 text-gray-800 text-xs font-medium border border-gray-300 me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"> <%= hack.categories.knowledge_categories.map(&:name).to_sentence %></span>
+            </div>
+          </td>
         </tr>      
       <% end %>
       </tbody>
